# gymbrot

./: .gitattributes  .gitignore  Comandos importantes.txt  README.md
doc/: Makefile  conf.py  generate_docs.sh  requirements-docs.txt
doc/Disenyos_Nodos_Interfaces/: Sprint_3_movement.drawio
gym_world/: CMakeLists.txt  my_map.yaml  package.xml
gym_world/launch/: turtlebot3_my_world.launch.py
gym_world/world/: burger.model
gymbrot/: CMakeLists.txt  package.xml
gymbrot_capture_image/: package.xml  setup.cfg  setup.py
gymbrot_capture_image/capture_image/: capturar.py
gymbrot_capture_image/gymbrot_capture_image/: capturar.py  template_matching_node.py  webcam_publisher.py
gymbrot_capture_image/test/: test_capturar.py
gymbrot_interfaces/: CMakeLists.txt  package.xml
gymbrot_interfaces/doc/: Disenyo.drawio
gymbrot_interfaces/srv/: IrMaquina.srv
gymbrot_point_nav_system/: package.xml  pytest.ini  setup.cfg  setup.py
gymbrot_point_nav_system/config/: gym_map.yaml  mapa_real.yaml  my_slam.rviz  puntos_maquina.txt  robot_real_params.yaml
gymbrot_point_nav_system/docs/: point_nav_system.Client_NavigateToPose.html
gymbrot_point_nav_system/gymbrot_point_nav_system/: client_navigate_to_pose.py  initial_pose_pub.py
gymbrot_point_nav_system/launch/: my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py  robot_real.launch.py  (+3 more)
gymbrot_world/: CMakeLists.txt  my_map.pgm  my_map.yaml  package.xml
interfaces_gymbrot/: CMakeLists.txt  package.xml
point_nav_system/: package.xml  setup.cfg  setup.py
rosweb/: .htaccess  gymbrot.sql  iniciar_gymbrot.sh
(+61 files in other folders)
