<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>gymbrot</name>
    <version>0.0.1</version>
    <description>
        Gymbrot ROS Project
    </description>
    <maintainer email="aesccar@etseamn.upv.es">Alex Escriva Caravaca</maintainer>
    <license>Apache 2.0</license>
    <!-- <url type="repository">https://github.com/XXXXXXX</url>
    <url type="bugtracker">https://github.com/XXXXXX</url> -->
    <author email="aesccar@etseamn.upv.es">Alex Escriva Caravaca</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>gymbrot_point_nav_system</exec_depend>
    <exec_depend>gymbrot_interfaces</exec_depend>
    <exec_depend>gymbrot_world</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>